--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     <li>Type <strong>DELETE</strong> to confirm</li>
   </ol>
   <p>Once confirmed, your account and all associated data (articles, bookmarks, endorsements, etc.) will be permanently deleted. This action is irreversible.</p>
-  <p>We do not retain your data after deletion. If you have issues deleting your account, please contact: <a href="mailto:your@email.com">your@email.com</a></p>
+  <p>We do not retain your data after deletion. If you have issues deleting your account, please contact: <a href="mailto:kernels.info1@gmail.com">kernels.info1@gmail.com</a></p>
 </body>
 </html>
